// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App The App 1`] = `
<div
  id="App"
>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    className="Map"
    height={617.5}
    width="950"
  />
</div>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  HI 😀 😎 There 
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="Button"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Map big and small 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    className="Map"
    height={520}
    width="800"
  />
  <svg
    className="Map"
    height={260}
    width="400"
  />
</div>
`;

exports[`Storyshots Map empty 1`] = `
<div>
  Loading
</div>
`;

exports[`Storyshots Map populated 1`] = `
<div>
  <div
    className="Tooltip"
    id="tooltip"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <svg
    className="Map"
    height={585}
    width="900"
  />
</div>
`;

exports[`Storyshots Tooltip empty 1`] = `
<div
  className="Tooltip"
  id="tooltip"
  style={
    Object {
      "display": "none",
    }
  }
/>
`;
